fix compile error, rename EnqueuedTasks to PersistentTasks